[gd_scene load_steps=7 format=3 uid="uid://c45o430um53hh"]

[ext_resource type="Script" path="res://scene/tutorial-blueprint/tutorial_blueprint.gd" id="1_l073x"]
[ext_resource type="Theme" uid="uid://cd478ei76tbcf" path="res://scene/ui/default_theme.tres" id="2_apgou"]
[ext_resource type="Texture2D" uid="uid://br7lcv6wr6676" path="res://scene/tutorial-blueprint/asset/background.png" id="3_c1ldj"]
[ext_resource type="Texture2D" uid="uid://dt6akb6ncemr5" path="res://asset/ui_spritesheet.png" id="4_pw3s8"]
[ext_resource type="Texture2D" uid="uid://dq2a4t5w7xx5h" path="res://scene/level/stone-age-level/asset/blueprint.png" id="5_ctxuq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_uxfun"]
atlas = ExtResource("4_pw3s8")
region = Rect2(80, 16, 6, 8)

[node name="TutorialBlueprint" type="CanvasLayer"]
script = ExtResource("1_l073x")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_apgou")

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_c1ldj")
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_ctxuq")
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 121.0
offset_top = 144.0
offset_right = 264.0
offset_bottom = 152.0
size_flags_vertical = 1
text = "angry mammoth"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="Control/TextureRect"]
layout_mode = 0
offset_left = 198.0
offset_top = 82.0
offset_right = 341.0
offset_bottom = 90.0
size_flags_vertical = 1
text = "fire slingshot!
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
metadata/_edit_lock_ = true

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(111, 31)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 7
text = "Blueprint Title"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 1

[node name="Control" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(47, 0)
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 2
size_flags_horizontal = 0
texture = SubResource("AtlasTexture_uxfun")
stretch_mode = 3

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/Control"]
layout_mode = 2
size_flags_vertical = 1
text = "00:23"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelCountLabel" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "05/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = 32.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
text = "Understood >"
metadata/_edit_lock_ = true
